Fix summary/statement spacing

--- a/src/scss/single/_provider-post.scss
+++ b/src/scss/single/_provider-post.scss
@@ -159,7 +159,7 @@
             &--summary,
             &--statement {
                 column-span: all;
-                margin-top: 10px;
+                margin-top: 30px;
             }
         }
 
